i1 - about us fixed banner, adjusted spacing our team section, fixed footer

--- a/iteration1/css/style.css
+++ b/iteration1/css/style.css
@@ -1066,14 +1066,14 @@ a:visited {
   margin: 75px auto 100px auto;
 }
 
-.au-pangcat-section-img{
+/*.au-pangcat-section-img{
   width: 1160px;
   height: 650px;
 
   background-color: #1E202C;
 
   margin: auto;
-}
+}*/
 
 
 .au-pangcat-section-texts {
@@ -1129,7 +1129,7 @@ a:visited {
 
   width: 1160px;
 
-  margin: 75px auto 100px auto;
+  margin: 50px auto 100px auto;
 }
 
 .au-team-section-texts {
@@ -1142,7 +1142,7 @@ a:visited {
 
   width: 940px;
 
-  margin: 0 auto 100px auto;
+  margin: 0 auto;
 }
 
 .au-team-section-texts h2 {
@@ -1153,12 +1153,12 @@ a:visited {
 
   line-height: 32px;
 
-  margin: 0 0 10px 0;
+  margin: 0;
 }
 
 .au-team-carousel-gallery{
   width: 1160px;
-  height: 520px;
+  height: 430px; /*originally 520px*/
 
   display: flex;
   justify-content: flex-start;
